k8s/gin-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: gin-web
  namespace: default
spec:
  selector:
    app: gin-web
    release: canary
  ports:
    - name: http
      targetPort: 8080
      port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gin-web-deploy
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gin-web
      release: canary
  template:
    metadata:
      labels:
        app: gin-web
        release: canary
    spec:
      containers:
        - name: gin-web
          image: hushichang/demo:latest
          ports:
            - name: http
              containerPort: 80
